[gd_scene load_steps=6 format=2]

[ext_resource path="res://BackgroundResources/TextWindowStyle.tres" type="StyleBox" id=1]
[ext_resource path="res://Scripts/CombatScreen.gd" type="Script" id=2]
[ext_resource path="res://ScenesMisc/ScrollRowsPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/MainFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://BackgroundResources/TextWindowViolet.tres" type="StyleBox" id=5]

[node name="CombatScreen" type="HBoxContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1280.0
margin_bottom = 780.0
focus_mode = 2
script = ExtResource( 2 )

[node name="Left" type="PanelContainer" parent="."]
margin_right = 300.0
margin_bottom = 760.0
rect_min_size = Vector2( 300, 0 )
custom_styles/panel = ExtResource( 1 )

[node name="Margin" type="MarginContainer" parent="Left"]
margin_right = 300.0
margin_bottom = 760.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="CombatLog" parent="Left/Margin" instance=ExtResource( 3 )]
margin_left = 10.0
margin_top = 10.0
margin_right = 290.0
margin_bottom = 750.0

[node name="Middle" type="VBoxContainer" parent="."]
margin_left = 304.0
margin_right = 936.0
margin_bottom = 760.0
size_flags_horizontal = 3

[node name="Enemies" type="HBoxContainer" parent="Middle"]
margin_right = 632.0
margin_bottom = 126.0
size_flags_vertical = 3
alignment = 1

[node name="Canvas" type="PanelContainer" parent="Middle"]
margin_top = 130.0
margin_right = 632.0
margin_bottom = 630.0
rect_min_size = Vector2( 0, 500 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 1 )

[node name="Allies" type="HBoxContainer" parent="Middle"]
margin_top = 634.0
margin_right = 632.0
margin_bottom = 760.0
size_flags_vertical = 3
alignment = 1

[node name="Right" type="PanelContainer" parent="."]
margin_left = 940.0
margin_right = 1260.0
margin_bottom = 760.0
custom_styles/panel = ExtResource( 1 )

[node name="Margins" type="MarginContainer" parent="Right"]
margin_right = 320.0
margin_bottom = 760.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Vbox" type="VBoxContainer" parent="Right/Margins"]
margin_left = 10.0
margin_top = 10.0
margin_right = 310.0
margin_bottom = 750.0
rect_min_size = Vector2( 300, 0 )

[node name="InfoLabel" type="Label" parent="Right/Margins/Vbox"]
margin_right = 300.0
margin_bottom = 368.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = ExtResource( 4 )
text = "What will you do?
S - Skills
I - Items
F - Run"

[node name="InfoRows" parent="Right/Margins/Vbox" instance=ExtResource( 3 )]
margin_top = 372.0
margin_right = 300.0
margin_bottom = 740.0
rect_min_size = Vector2( 100, 200 )
custom_styles/panel = ExtResource( 5 )

[node name="InputLine" type="LineEdit" parent="Right/Margins/Vbox"]
visible = false
margin_top = 716.0
margin_right = 300.0
margin_bottom = 740.0

[node name="TurnQueue" type="Node" parent="."]

[connection signal="resized" from="Middle/Canvas" to="." method="_on_Canvas_resized"]
